[package]
name = "doppler"
version = "1.1.4"
authors = ["Andres Vahter <andres.vahter@gmail.com>"]
build = "build.rs"

[dependencies]
clap = "*"
libc = "*"
time = "*"
num = "*"

[dependencies.gpredict]
git = "https://github.com/cubehub/rust-gpredict.git"

[dependencies.liquid_dsp]
git = "https://github.com/cubehub/rust-liquid-dsp.git"

[build-dependencies]
gcc = "0.3"
