[package]
name = "doppler"
version = "1.1.10"
authors = ["Andres Vahter <andres.vahter@gmail.com>"]
build = "build.rs"

[dependencies]
clap = "*"
libc = "*"
time = "*"
num = "*"
log = "*"

[dependencies.gpredict]
git = "https://github.com/cubehub/rust-gpredict.git"

[dependencies.liquid_dsp]
git = "https://github.com/cubehub/rust-liquid-dsp.git"

[dependencies.fern]
git = "https://github.com/marjakm/fern-rs.git"

[build-dependencies]
gcc = "*"
